test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 01 Dec 2025 03:02:28 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="UqNMtgPzBMFS9uutj/W0RSN7BES1mecz", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 6

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}